export package and handle empty elements a bit so it's useful for test harnessing
Signed-off-by: cpw <cpw+github@weeksfamily.ca>